# mcp-server-mysql

./: .env.example  .gitignore  CLAUDE_SETUP.md  DATABASE_SWITCHING_SUMMARY.md  Dockerfile  KIRO_SETUP.md  PROJECT_STATUS.md  README.md  claude_desktop_config.json  mysql_server.py  pyproject.toml  requirements.txt  run_tests.py  start_server.sh  test_live_mysql.py
.claude/: settings.local.json
tests/: test_database_switching.py  test_live_mysql.py  test_mysql_diagnostic.py  test_no_default_database.py  test_stdio_transport.py  test_truly_no_default.py
